macos/Classes/trtc_c_api/trtc_cloud_type.h

typedef void* trtc_cloud;
typedef void* trtc_cloud_callback;
typedef void* trtc_video_render_callback;
typedef void* trtc_video_frame_callback;
typedef void* trtc_audio_frame_callback;
typedef void* trtc_log_callback;
typedef void* trtc_screen_capture_source_list;
typedef struct {
  int left;
  int top;
  int right;
  int bottom;
} trtc_rect_t;
// 5.25
typedef struct {
  const char* user_id;
  uint32_t int_room_id;
  const char* str_room_id;
} trtc_user_t;
// 5.28
typedef struct {
  trtc_rect_t rect;
  int z_order;
  int fill_mode;  // 1.4 TRTCVideoFillMode
  uint32_t background_color;
  const char* place_holder_image;
  trtc_user_t* fixed_video_user;
  int fixed_video_stream_type;  // 1.3 TRTCVideoStreamType
} trtc_video_layout_t;
// 5.29
typedef struct {
  const char* watermark_url;
  trtc_rect_t rect;
  int z_order;
} trtc_watermark_t;
// 5.30
typedef struct {
  uint32_t video_encoded_width;
  uint32_t video_encoded_height;
  uint32_t video_encoded_fps;
  uint32_t video_encoded_gop;
  uint32_t video_encoded_kbps;
  uint32_t audio_encoded_sample_rate;
  uint32_t audio_encoded_channel_num;
  uint32_t audio_encoded_kbps;
  uint32_t audio_encoded_codec_type;
  uint32_t video_encoded_codec_type;
  const char* video_sei_params;
} trtc_stream_encoder_param_t;
// 5.31
typedef struct {
  uint32_t background_color;
  const char* background_image;
  trtc_video_layout_t* video_layout_list;
  uint32_t video_layout_list_size;
  trtc_user_t* audio_mix_user_list;
  uint32_t audio_mix_user_list_size;
  trtc_watermark_t* watermark_list;
  uint32_t watermark_list_size;
} trtc_stream_mixing_config_t;
// 5.33
typedef struct {
  uint32_t interval;
  int enable_vad_detection;         // bool -> int
  int enable_pitch_calculation;     // bool -> int
  int enable_spectrum_calculation;  // bool -> int
} trtc_audio_volume_evaluate_params_t;
// new
typedef struct {
  int level;
  int console_enabled;
  int compress_enabled;
  const char* path;
} trtc_log_param_t;
typedef enum {
  log_info = 0,
  log_warning = 1,
  log_error = 2,
  log_fatal = 3,
} trtc_log_write_level;