lib/bindings/trtc/trtc_cloud_struct.dart


// 5.28
class trtc_video_layout_t extends ffi.Struct {
  external trtc_rect_t rect;

  @ffi.Int()
  external int z_order;

  // 1.4 TRTCVideoFillMode
  @ffi.Int()
  external int fill_mode;

  @ffi.Uint32()
  external int background_color;

  external ffi.Pointer<ffi.Char> place_holder_image;

  external ffi.Pointer<trtc_user_t> fixed_video_user;

  // 1.3 TRTCVideoStreamType
  @ffi.Int()
  external int fixed_video_stream_type;

  static ffi.Pointer<trtc_video_layout_t> fromParams(TRTCVideoLayout params) {
    final paramsPointer = calloc<trtc_video_layout_t>();
    paramsPointer.ref
      ..rect.left = params.rect.left
      ..rect.top = params.rect.top
      ..rect.right = params.rect.right
      ..rect.bottom = params.rect.bottom
      ..z_order = params.zOrder
      ..fill_mode = params.fillMode.value()
      ..background_color = params.backgroundColor
      ..place_holder_image =
          params.placeHolderImage.toString().toNativeUtf8().cast<ffi.Char>()
      ..fixed_video_user = trtc_user_t.fromParams(params.fixedVideoUser)
      ..fixed_video_stream_type = params.fixedVideoStreamType.value();
    return paramsPointer;
  }

  static ffi.Pointer<trtc_video_layout_t> setParamList(
      List<TRTCVideoLayout> list) {
    final paramsPointer = calloc<trtc_video_layout_t>(list.length);

    for (int i = 0; i < list.length; i++) {
      paramsPointer[i]
        ..rect.left = list[i].rect.left
        ..rect.top = list[i].rect.top
        ..rect.right = list[i].rect.right
        ..rect.bottom = list[i].rect.bottom
        ..z_order = list[i].zOrder
        ..fill_mode = list[i].fillMode.value()
        ..background_color = list[i].backgroundColor
        ..place_holder_image =
            list[i].placeHolderImage.toString().toNativeUtf8().cast<ffi.Char>()
        ..fixed_video_user = trtc_user_t.fromParams(list[i].fixedVideoUser)
        ..fixed_video_stream_type = list[i].fixedVideoStreamType.value();
    }
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_video_layout_t> pointer) {
    calloc.free(pointer.ref.place_holder_image);
    trtc_user_t.freeStruct(pointer.ref.fixed_video_user);

    calloc.free(pointer);
  }

  static freeStructList(ffi.Pointer<trtc_video_layout_t> pointer, int length) {
    for (int i = 0; i < length; i++) {
      calloc.free(pointer[i].place_holder_image);
      trtc_user_t.freeStruct(pointer[i].fixed_video_user);
    }

    calloc.free(pointer);
  }
}

// 5.29
class trtc_watermark_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> watermark_url;

  external trtc_rect_t rect;

  @ffi.Int()
  external int z_order;

  static ffi.Pointer<trtc_watermark_t> fromParams(TRTCWatermark params) {
    final paramsPointer = calloc<trtc_watermark_t>();
    paramsPointer.ref
      ..watermark_url = params.watermarkUrl.toNativeUtf8().cast<ffi.Char>()
      ..rect.left = params.rect.left
      ..rect.top = params.rect.top
      ..rect.right = params.rect.right
      ..rect.bottom = params.rect.bottom
      ..z_order = params.zOrder;
    return paramsPointer;
  }

  static ffi.Pointer<trtc_watermark_t> setParamList(List<TRTCWatermark> list) {
    final paramsPointer = calloc<trtc_watermark_t>(list.length);

    for (int i = 0; i < list.length; i++) {
      paramsPointer[i]
        ..watermark_url = list[i].watermarkUrl.toNativeUtf8().cast<ffi.Char>()
        ..rect.left = list[i].rect.left
        ..rect.top = list[i].rect.top
        ..rect.right = list[i].rect.right
        ..rect.bottom = list[i].rect.bottom
        ..z_order = list[i].zOrder;
    }
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_watermark_t> pointer) {
    calloc.free(pointer.ref.watermark_url);

    calloc.free(pointer);
  }

  static freeStructList(ffi.Pointer<trtc_watermark_t> pointer, int length) {
    for (int i = 0; i < length; i++) {
      calloc.free(pointer[i].watermark_url);
    }

    calloc.free(pointer);
  }
}

// 5.30
class trtc_stream_encoder_param_t extends ffi.Struct {
  @ffi.Uint32()
  external int video_encoded_width;

  @ffi.Uint32()
  external int video_encoded_height;

  @ffi.Uint32()
  external int video_encoded_fps;

  @ffi.Uint32()
  external int video_encoded_gop;

  @ffi.Uint32()
  external int video_encoded_kbps;

  @ffi.Uint32()
  external int audio_encoded_sample_rate;

  @ffi.Uint32()
  external int audio_encoded_channel_num;

  @ffi.Uint32()
  external int audio_encoded_kbps;

  @ffi.Uint32()
  external int audio_encoded_codec_type;

  @ffi.Uint32()
  external int video_encoded_codec_type;

  external ffi.Pointer<ffi.Char> video_sei_params;

  static ffi.Pointer<trtc_stream_encoder_param_t> fromParams(
      TRTCStreamEncoderParam params) {
    final paramsPointer = calloc<trtc_stream_encoder_param_t>();
    paramsPointer.ref
      ..video_encoded_width = params.videoEncodedWidth
      ..video_encoded_height = params.videoEncodedHeight
      ..video_encoded_fps = params.videoEncodedFPS
      ..video_encoded_gop = params.videoEncodedGOP
      ..video_encoded_kbps = params.videoEncodedKbps
      ..audio_encoded_sample_rate = params.audioEncodedSampleRate
      ..audio_encoded_channel_num = params.audioEncodedChannelNum
      ..audio_encoded_kbps = params.audioEncodedKbps
      ..audio_encoded_codec_type = params.audioEncodedCodecType
      ..video_encoded_codec_type = params.videoEncodedCodecType
      ..video_sei_params =
          params.videoSeiParams.toNativeUtf8().cast<ffi.Char>();
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_stream_encoder_param_t> pointer) {
    calloc.free(pointer.ref.video_sei_params);

    calloc.free(pointer);
  }
}

// 5.31
class trtc_stream_mixing_config_t extends ffi.Struct {
  @ffi.Uint32()
  external int background_color;

  external ffi.Pointer<ffi.Char> background_image;

  external ffi.Pointer<trtc_video_layout_t> video_layout_list;

  @ffi.Uint32()
  external int video_layout_list_size;

  external ffi.Pointer<trtc_user_t> audio_mix_user_list;

  @ffi.Uint32()
  external int audio_mix_user_list_size;

  external ffi.Pointer<trtc_watermark_t> watermark_list;

  @ffi.Uint32()
  external int watermark_list_size;

  static ffi.Pointer<trtc_stream_mixing_config_t> fromParams(
      TRTCStreamMixingConfig config) {
    final configPointer = calloc<trtc_stream_mixing_config_t>();
    configPointer.ref
      ..background_color = config.backgroundColor
      ..background_image =
          config.backgroundImage.toString().toNativeUtf8().cast<ffi.Char>()
      ..video_layout_list =
          trtc_video_layout_t.setParamList(config.videoLayoutList)
      ..video_layout_list_size = config.videoLayoutList.length
      ..audio_mix_user_list = trtc_user_t.setParamList(config.audioMixUserList)
      ..audio_mix_user_list_size = config.audioMixUserList.length
      ..watermark_list = trtc_watermark_t.setParamList(config.watermarkList)
      ..watermark_list_size = config.watermarkList.length;
    return configPointer;
  }

  static freeStruct(ffi.Pointer<trtc_stream_mixing_config_t> pointer) {
    calloc.free(pointer.ref.background_image);
    trtc_video_layout_t.freeStructList(
        pointer.ref.video_layout_list, pointer.ref.video_layout_list_size);
    trtc_user_t.freeStructList(
        pointer.ref.audio_mix_user_list, pointer.ref.audio_mix_user_list_size);
    trtc_watermark_t.freeStructList(
        pointer.ref.watermark_list, pointer.ref.watermark_list_size);

    calloc.free(pointer);
  }
}

// 5.33
class trtc_audio_volume_evaluate_params_t extends ffi.Struct {
  @ffi.Uint32()
  external int interval;

  // bool -> int
  @ffi.Int()
  external int enable_vad_detection;

  // bool -> int
  @ffi.Int()
  external int enable_pitch_calculation;

  // bool -> int
  @ffi.Int()
  external int enable_spectrum_calculation;

  static ffi.Pointer<trtc_audio_volume_evaluate_params_t> fromParams(
      TRTCAudioVolumeEvaluateParams params) {
    final paramsPointer = calloc<trtc_audio_volume_evaluate_params_t>();
    paramsPointer.ref
      ..interval = params.interval
      ..enable_vad_detection = params.enableVadDetection ? 1 : 0
      ..enable_pitch_calculation = params.enablePitchCalculation ? 1 : 0
      ..enable_spectrum_calculation = params.enableSpectrumCalculation ? 1 : 0;
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_audio_volume_evaluate_params_t> pointer) {
    calloc.free(pointer);
  }
}

// new
class trtc_log_param_t extends ffi.Struct {
  @ffi.Int()
  external int level;

  @ffi.Int()
  external int console_enabled;

  @ffi.Int()
  external int compress_enabled;

  external ffi.Pointer<ffi.Char> path;

  static ffi.Pointer<trtc_log_param_t> fromParams(TRTCLogParams param) {
    final paramPointer = calloc<trtc_log_param_t>();
    paramPointer.ref
      ..level = param.level.value()
      ..console_enabled = param.consoleEnabled ? 1 : 0
      ..compress_enabled = param.compressEnabled ? 1 : 0
      ..path = param.filePath.toNativeUtf8().cast<ffi.Char>();
    return paramPointer;
  }

  static freeStruct(ffi.Pointer<trtc_log_param_t> pointer) {
    calloc.free(pointer.ref.path);

    calloc.free(pointer);
  }
}

typedef trtc_cloud = ffi.Pointer<ffi.Void>;
typedef trtc_cloud_callback = ffi.Pointer<ffi.Void>;
typedef trtc_screen_capture_source_list = ffi.Pointer<ffi.Void>;
typedef trtc_video_frame_callback = ffi.Pointer<ffi.Void>;
typedef trtc_video_render_callback = ffi.Pointer<ffi.Void>;
typedef trtc_audio_frame_callback = ffi.Pointer<ffi.Void>;
typedef trtc_log_callback = ffi.Pointer<ffi.Void>;

abstract class trtc_log_write_level {
  static const int log_info = 0;
  static const int log_warning = 1;
  static const int log_error = 2;
  static const int log_fatal = 3;
}

class FFIConverter {
  static String getStringFromChar(ffi.Pointer<ffi.Char> charPointer) {
    ffi.Pointer<Utf8> utf8 = charPointer.cast<Utf8>();
    return utf8.toDartString();
  }
}
